--- a/js/package.json
+++ b/js/package.json
@@ -4,8 +4,12 @@
   "dependencies": {
     "@polymer/decorators": "^3.0.0",
     "@polymer/font-roboto-local": "^3.0.0-pre.25",
+    "@polymer/iron-collapse": "^3.0.0-pre.25",
+    "@polymer/iron-icon": "^3.0.0-pre.25",
+    "@polymer/iron-icons": "^3.0.0-pre.25",
     "@polymer/paper-button": "^3.0.0-pre.25",
     "@polymer/paper-dialog": "^3.0.0-pre.25",
+    "@polymer/paper-icon-button": "^3.0.0-pre.25",
     "@polymer/paper-input": "^3.0.0-pre.25",
     "@polymer/paper-spinner": "^3.0.0-pre.25",
     "@polymer/polymer": "^3.0.0",
