--- a/js/package.json
+++ b/js/package.json
@@ -7,17 +7,19 @@
     "@polymer/iron-collapse": "^3.0.0-pre.25",
     "@polymer/iron-icon": "^3.0.0-pre.25",
     "@polymer/iron-icons": "^3.0.0-pre.25",
+    "@polymer/iron-pages": "^3.0.0-pre.25",
     "@polymer/paper-button": "^3.0.0-pre.25",
     "@polymer/paper-dialog": "^3.0.0-pre.25",
     "@polymer/paper-icon-button": "^3.0.0-pre.25",
     "@polymer/paper-input": "^3.0.0-pre.25",
     "@polymer/paper-spinner": "^3.0.0-pre.25",
+    "@polymer/paper-tabs": "^3.0.0-pre.25",
     "@polymer/polymer": "^3.0.0",
     "@types/url-template": "^2.0.28",
     "url-template": "^2.0.8"
   },
   "scripts": {
-    "start": "webpack-dev-server --open --config ./webpack.dev.conf.js",
+    "start": "webpack-dev-server --config ./webpack.dev.conf.js",
     "build": "webpack --config ./webpack.prod.conf.js"
   },
   "devDependencies": {
