--- a/js/package.json
+++ b/js/package.json
@@ -5,9 +5,11 @@
     "@polymer/decorators": "^3.0.0",
     "@polymer/font-roboto-local": "^3.0.0-pre.25",
     "@polymer/iron-collapse": "^3.0.0-pre.25",
+    "@polymer/iron-flex-layout": "^3.0.0-pre.25",
     "@polymer/iron-icon": "^3.0.0-pre.25",
     "@polymer/iron-icons": "^3.0.0-pre.25",
     "@polymer/iron-pages": "^3.0.0-pre.25",
+    "@polymer/marked-element": "^3.0.0-pre.25",
     "@polymer/paper-button": "^3.0.0-pre.25",
     "@polymer/paper-dialog": "^3.0.0-pre.25",
     "@polymer/paper-icon-button": "^3.0.0-pre.25",
@@ -16,6 +18,7 @@
     "@polymer/paper-tabs": "^3.0.0-pre.25",
     "@polymer/polymer": "^3.0.0",
     "@types/url-template": "^2.0.28",
+    "marked": "^0.5.0",
     "url-template": "^2.0.8"
   },
   "scripts": {
@@ -26,6 +29,7 @@
     "@webcomponents/webcomponentsjs": "^2.0.0",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
+    "expose-loader": "^0.7.5",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^5.0.0",
